fix: <directions-post> se corrige campo direction
